# odps-python

./: .gitignore  .mcp.json  AGENTS.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  ODPS_V4.1_VERIFICATION_REPORT.md  README.md  V4.1_MIGRATION_SUMMARY.md  llms.txt  pyproject.toml  requirements.txt
.codex/: config.toml
apps/: README.md  __init__.py
apps/document_inspector/: __init__.py  cli.py
apps/pricing_402_builder/: cli.py  priced_product.yaml
apps/vocabulary_finder/: cli.py
docs/: API.md  tooling-development-model.md
docs/superpowers/plans/: 2026-05-13-open-data-products-namespace-migration.md
docs/superpowers/specs/: 2026-05-13-open-data-products-sdk-design.md
examples/: advanced_features.py  basic_usage.py  comprehensive_example.py  odps_v41_example.py
odps/: __init__.py  core.py  enums.py  exceptions.py  models.py  protocols.py  validation.py  validators.py
open_data_products/: __init__.py  agent.py  cli.py  pricing.py  resources.py  results.py  summary.py
open_data_products/mcp/: __init__.py  manifest.py  server.py  tools.py
open_data_products/odpc/: __init__.py  catalog.py  cli.py
open_data_products/odpc/data/: __init__.py
open_data_products/odpc/data/catalog/: __init__.py  objects.jsonl
open_data_products/odpc/data/schema/: __init__.py  odpc.yaml
open_data_products/odpg/: __init__.py  _explorer_template.py  cli.py  graph.py
open_data_products/odpg/data/graph/: graph.yaml  objects.jsonl
open_data_products/odpg/data/schema/: odpg.json  odpg.yaml
open_data_products/odps/: __init__.py  _iso_codes.py  codecs.py  core.py  enums.py  exceptions.py  models.py  validators.py
open_data_products/odps/data/: __init__.py
open_data_products/odps/data/schema/: __init__.py
open_data_products/odpv/: __init__.py  cli.py  vocabulary.py
open_data_products/odpv/data/: __init__.py
open_data_products/odpv/data/vocab/: __init__.py
skills/odp-author/: SKILL.md
skills/odp-explore-graph/: SKILL.md
skills/odp-validate/: SKILL.md
tests/: __init__.py  conftest.py  test_agent_api.py  test_agentic_patterns.py  test_apps.py  test_core.py  test_examples.py  test_integration.py  test_models.py  test_namespace_compatibility.py  test_namespace_layout.py  test_odpc.py  test_odpg.py  test_odpv.py  test_validation.py
