[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "open-data-products"
dynamic = ["version"]
description = "Python SDK for the OpenDataProducts.org standards family, including ODPS, ODPC, ODPG, and ODPV support"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Chris Howard", email = "chris.howard@accenture.com"}
]
keywords = [
    "open-data",
    "data-product",
    "open-data-products",
    "odps",
    "odpv",
    "odpc",
    "odpg",
    "specification",
    "validation",
    "vocabulary",
    "catalog",
    "graph",
    "iso-standards",
    "rfc",
    "type-safety",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Database",
]
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0.2",
    "jsonschema>=4.0",
]

[project.scripts]
# Unified CLI. Subcommands: validate, explain, refs, resources, summary,
# manifest, serve. The MCP server runs via `open-data-products serve`.
open-data-products = "open_data_products.cli:main"
# Retained: emits a standalone HTML graph explorer; not yet a subcommand.
open-data-products-odpg-generate = "open_data_products.odpg.cli:generate_main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=3.0.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.991",
    "build>=0.8.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Open-Data-Product-Initiative/odps-python"
Documentation = "https://github.com/Open-Data-Product-Initiative/odps-python#readme"
Repository = "https://github.com/Open-Data-Product-Initiative/odps-python"
"Bug Tracker" = "https://github.com/Open-Data-Product-Initiative/odps-python/issues"

[tool.setuptools]
packages = [
    "open_data_products",
    "open_data_products.odpc",
    "open_data_products.odpc.data",
    "open_data_products.odpc.data.catalog",
    "open_data_products.odpc.data.schema",
    "open_data_products.odpg",
    "open_data_products.odpg.data",
    "open_data_products.odpg.data.graph",
    "open_data_products.odpg.data.schema",
    "open_data_products.odps",
    "open_data_products.odpv",
    "open_data_products.odpv.data",
    "open_data_products.odpv.data.vocab",
]

[tool.setuptools.package-data]
"open_data_products.odpc" = [
    "data/catalog/*.jsonl",
    "data/schema/*.json",
    "data/schema/*.yaml",
]
"open_data_products.odpg" = [
    "data/graph/*.jsonl",
    "data/graph/*.yaml",
    "data/schema/*.json",
    "data/schema/*.yaml",
]
"open_data_products.odpv" = [
    "data/vocab/*.json",
    "data/vocab/*.jsonl",
    "data/vocab/*.yaml",
]

[tool.setuptools.dynamic]
version = {attr = "open_data_products.__version__"}

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["open_data_products"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
]
show_missing = true
precision = 2
